Adjust widths and margins of block posts, so entry headers, meta and footer stay the same width on different screen sizes.

--- a/stylesheets/_entries.scss
+++ b/stylesheets/_entries.scss
@@ -8,30 +8,32 @@
 .entry-content,
 .entry-summary,
 .page-content {
-	
+
 	@include clearfix;
-	
+
 	@include media( tablet ) {
 		width: $x-grid-column-7;
 	}
 
 	> *:not(.alignfull) {
-		margin: $x-space-sm;
-		max-width: calc( 100% - ( #{$x-space-sm} * 2 ) );
+		// margin: $x-space-sm;
+		margin-top: $x-space-sm;
+		margin-bottom: $x-space-sm;
+		// max-width: calc( 100% - ( #{$x-space-sm} * 2 ) );
 
 		&:first-child {
 			margin-top: 0;
 		}
 
 		@include media( tablet ) {
-			max-width: $x-grid-column-7;
-			margin-right: auto;
-			margin-left: auto;
+			// max-width: $x-grid-column-7;
+			// margin-right: auto;
+			// margin-left: auto;
 		}
 	}
 
 	h1, h2, h3, h4, h5, h6 {
-		margin: $x-space-md auto !important;
+		margin: $x-space-md auto !important; // TODO: Remove !important.
 	}
 
 }
@@ -45,7 +47,11 @@
 .hentry {
 	.entry-header {
 		background-color: $x-color-secondary-base;
-		padding: 120px 0 $x-space-md;	
+		padding: 120px 0 $x-space-md;
+
+		@include media( tablet ) {
+			width: $x-grid-column-7;
+		}
 	}
 
 	.entry-meta {
@@ -60,6 +66,10 @@
 		a {
 			color: $x-color-words-subtle;
 			@include link_underline();
+		}
+
+		@include media( tablet ) {
+			width: $x-grid-column-7;
 		}
 	}
 
@@ -117,12 +127,16 @@
 		}
 
 		.tags-links a {
-			margin-right: $x-space-xxs;			
+			margin-right: $x-space-xxs;
 		}
 
 		.edit-link,
 		.comments-link {
 			display: block;
+		}
+
+		@include media( tablet ) {
+			width: $x-grid-column-7;
 		}
 	}
 }
@@ -154,7 +168,8 @@
 			margin: 0 $x-space-sm;
 
 			@include media(tablet) {
-				margin: 0;
+				margin-left: auto;
+				margin-right: auto;
 			}
 		}
 
@@ -176,6 +191,15 @@
 				text-transform: uppercase;
 				font-size: $x-font-size-sm;
 				font-weight: 600;
+			}
+		}
+
+		.entry-content,
+		.entry-summary {
+			margin: 0 $x-space-sm;
+			@include media(tablet) {
+				margin-left: auto;
+				margin-right: auto;
 			}
 		}
 
@@ -202,17 +226,17 @@
 				font-size: $x-font-size-xxxl;
 				font-weight: 600;
 			}
-	
+
 			.entry-title,
 			.entry-meta {
 				color: $x-color-shade-white;
 				max-width: $x-grid-column-7;
 				margin-left: auto;
 				margin-right: auto;
-				text-align: center;	
+				text-align: center;
 
 				a {
-					color: $x-color-shade-white;				
+					color: $x-color-shade-white;
 				}
 			}
 		}
@@ -222,7 +246,7 @@
 			.wp-block-cover:first-child {
 				margin-top: 0;
 			}
-			
+
 			> *:first-child:not(.wp-block-cover) {
 				margin-top: $x-space-lg;
 			}
