Add missing spacing to latest posts block.

--- a/css/blocks.scss
+++ b/css/blocks.scss
@@ -344,6 +344,10 @@
 	@include media( tablet ) {
 		padding-left: $x-space-lg;
 		padding-right: $x-space-lg;
+		&.is-grid {
+			padding-left: $x-space-md;
+			padding-right: $x-space-md;
+		}
 	}
 }
 
