--- a/css/blocks.scss
+++ b/css/blocks.scss
@@ -16,23 +16,29 @@
 
 	@include media( tablet ) {
 		.alignwide {
+
+			$width: 1235px;
+			$sep: 18px;
+
+			min-width: $width;
 			position: relative;
-			width: $x-space-column-12;
-			transform: translateX( -50% );
-			max-width: calc( 100vw - 2 * 1em );
 			margin-top: 1em;
 			margin-bottom: 1em;
-			left: 50%;
+			margin-left: calc( -1 * ( #{$width} - #{$x-grid-column-7} ) / 2 );
+			
+			@media only screen and (min-width: $tablet_width) and (max-width: ($width + 2 * $sep ) ) {
+				margin-left: calc( -1 * ( 100vw - #{$x-grid-column-7} ) / 2 + #{$sep} );
+				width: 100vw;
+				min-width: initial;
+				max-width: calc( 100vw - 2 * #{$sep} );
+			}
 		}
 
 		.alignfull {
 			position: relative;
-			transform: translateX( -50% );
-			width: 100vw;
-			max-width: 100vw;
-			margin-top: 1em;
-			margin-bottom: 1em;
-			left: 50%;
+			min-width: 100vw;
+			margin-left: 50%;
+			left: -50vw;
 		}
 	}
 	
@@ -121,40 +127,32 @@
 // !Buttons
 
 .wp-block-file .wp-block-file__button,
-.wp-block-button .wp-block-button__link{
+.wp-block-button .wp-block-button__link {
+	@include button-style;
+}
 
-	background-color: $x-color-accent-base;
-	color: $x-color-shade-white;
-	padding: $x-space-xxs $x-space-xs;
-	font-size: $x-font-size-sm;
-	line-height: $x-font-leading-body;
-	letter-spacing: $x-font-letter-spacing;
-	@include rounded( 3px );
-	border: 0;
-	cursor: pointer;
-	display: inline-block;
-	font-weight: 600;
-	text-decoration: none;
-	text-transform: uppercase;
-	vertical-align: middle;
+.wp-block-button.is-style-squared .wp-block-button__link  {
+	border-radius: 0;
+}
 
+.wp-block-button.is-style-outline .wp-block-button__link {
+	background: transparent;
+	border: solid 2px $x-color-accent-base;
+	color: $x-color-accent-base;
+	
 	&:hover {
-		background-color: $x-color-accent-light;
-	}
-
-	&:active,
-	&:focus {
-		background-color: $x-color-accent-light;
-	}
-
-	@include media( tablet ) {
-		padding: $x-space-xs $x-space-sm;
+		background: $x-color-accent-base;
+		color: white;
 	}
 }
 
 // !Audio
 
 .wp-block-audio {
+	
+	figcaption {
+		text-align: center !important;
+	}
 
 	audio {
 		width: 100%;
@@ -197,6 +195,10 @@
 		}
 	}
 	
+	figcaption {
+		text-align: center !important;
+	}
+	
 	.alignleft,
 	.aligncenter,
 	.alignright {
@@ -226,7 +228,8 @@
 
 // !Cover
 
-.wp-block-cover {
+.wp-block-cover,
+.wp-block-cover-image {
 	width: inherit;
 
 	@include media( tablet ) {
@@ -248,6 +251,7 @@
 	}
 
 	.wp-block-cover-text,
+	.wp-block-cover-image-text,
 	h2 {
 		font-weight: 400;
 		padding: $x-space-md;
@@ -264,7 +268,9 @@
 }
 
 [data-align=left] .wp-block-cover,
-[data-align=right] .wp-block-cover {
+[data-align=left] .wp-block-cover-image,
+[data-align=right] .wp-block-cover,
+[data-align=right] .wp-block-cover-image {
 
 	max-width: 285px;
 
@@ -319,15 +325,15 @@
 	justify-content: space-between;
 
 	&.has-2-columns .wp-block-column {
-		width: calc( 50% - ( $x-space-gutter * .5 ) );
+		width: calc(50% - ( #{$x-space-gutter} * .5 ));
 	}
 
 	&.has-3-columns .wp-block-column {
-		width: calc( 33% - ( $x-space-gutter * .33 ) );
+		width: calc(33% - ( #{$x-space-gutter} * 0.33));
 	}
 
 	&.has-4-columns .wp-block-column {
-		width: calc( 25% - ( $x-space-gutter * .25 ) );
+		width: calc(25% - ( #{$x-space-gutter} * .25 ));
 	}
 
 }
@@ -340,6 +346,10 @@
 	@include media( tablet ) {
 		padding-left: $x-space-lg;
 		padding-right: $x-space-lg;
+		&.is-grid {
+			padding-left: $x-space-md;
+			padding-right: $x-space-md;
+		}
 	}
 }
 
@@ -363,6 +373,11 @@ ol.wp-block-latest-comments {
 	li li {
 		font-size: 1em;
 	}
+	
+	&.aligncenter li {
+		text-align: center;
+		list-style-position: inside;
+	}
 
 	&.is-grid {
 		justify-content: space-between;
@@ -379,7 +394,8 @@ ol.wp-block-latest-comments {
 		}
 	}
 }
-ol.wp-block-latest-comments {
+
+.wp-block-latest-comments {
 	
 	> li:before {
 		content: '';
@@ -392,6 +408,7 @@ ol.wp-block-latest-comments {
 			padding-left: $x-space-md;
 		}			
 	}
+	
 }
 
 .wp-block-latest-comments__comment-excerpt {
@@ -622,10 +639,9 @@ table.wp-block-table {
 .wp-block-file {
 	
 	> a:first-child {
-		color: inherit;
-		box-shadow: none;
+		@include link-underline;
 		&:hover {
-			text-decoration: underline;
+			text-decoration: none;
 		}
 	}
 	
