Add missing margin to social navigation menu items

--- a/stylesheets/_site-navigation.scss
+++ b/stylesheets/_site-navigation.scss
@@ -368,6 +368,12 @@
 				display: none;
 			}
 
+			&:nth-child(n+2) {
+				@include media( mobile ) {
+					margin-left: 0.7em;
+				}
+			}
+
 			a {
 				display: inline-block;
 				line-height: 1;
